--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Outfit';
+    src: url(components/Outfit.woff2) format('woff2');
+  }
+
 @layer base{
     html{
-        font-family: "SF Pro Display", "Poppins", sans-serif;
+        font-family: "Outfit", "SF Pro Display", "Poppins", sans-serif;
     }
 }
